objects/et4ae5__Email_Linkage__c.object
<CustomObject>
    <label>Email Linkage</label>
    <nameField>
        <displayFormat>EL-{0000}</displayFormat>
        <label>Email Linkage Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Email Linkages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>et4ae5__emailId__c</fullName>
        <externalId>true</externalId>
        <label>emailId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>et4ae5__emailName__c</fullName>
        <label>emailName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>et4ae5__ExcludedReports__c</fullName>
        <label>ExcludedReports</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>et4ae5__IncludedReports__c</fullName>
        <label>IncludedReports</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>et4ae5__Excluded_Reports__c</fullName>
        <label>Excluded Reports</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>et4ae5__Included_Reports__c</fullName>
        <label>Included Reports</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>et4ae5__ExcludedCampaigns__c</fullName>
        <label>ExcludedCampaigns</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>et4ae5__IncludedCampaigns__c</fullName>
        <label>IncludedCampaigns</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>et4ae5__Excluded_Campaigns__c</fullName>
        <label>Excluded Campaigns</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>et4ae5__Included_Campaigns__c</fullName>
        <label>Included Campaigns</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>et4ae5__IncludedSubscriberLists__c</fullName>
        <label>IncludedSubscriberLists</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>et4ae5__Included_Subscriber_Lists__c</fullName>
        <label>Included Subscriber Lists</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
</CustomObject>